--- a/API/Polonicus_API.csproj
+++ b/API/Polonicus_API.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\api\PhotoStorage\" />
+  </ItemGroup>
+
 </Project>
