--- a/Client/package.json
+++ b/Client/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.2",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-geocode": "^0.2.3",
     "react-i18next": "^11.14.3",
     "react-leaflet": "^3.2.2",
